[metadata]
name = upt-npm
version = 0.1
description = npm frontend for upt
long_description = file: README.md
author = Kiteretsu
author_email = karan.sheth@somaiya.edu
url= https://framagit.org/upt/upt-npm
requires_python = >= 3.6
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3 :: Only

[options] 
packages = find:
install_requires =
    requests
    upt>=0.6

[options.entry_points]
upt.frontends =
    npm = upt_npm.upt_npm:NpmFrontend

[options.extras_require]
test =
